--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FLAMES by Meiy</title>
+  <title>FLAMES || Mr.Meiy</title>
   <link rel="icon" href="image/b.jpg" type="image/icon type">
   <script type='text/javascript' src='flames.js'></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
