--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
     .container
     {
-      width: 500px;
+      /*width: 500px;*/
       background-color: rgba(245, 245, 245, 0.8);
     }
     /*.btn
