--- a/index.html
+++ b/index.html
@@ -18,23 +18,10 @@
     }
     .container
     {
+      padding: 10px;
       width: 500px;
       background-color: rgba(245, 245, 245, 0.8);
     }
-    /*.btn
-    {
-      animation: example 6s linear 0s infinite alternate;
-      animation-name: animation1;
-    }
-    @keyframes animation1
-    {
-      0%   {color: blue;}
-      20%  {color: #FF0080;}
-      40%  {color: #DBA901;}
-      60%  {color: green;}
-      80%  {color: red;}
-      100% {color: violet;}
-    }*/
   </style>
 </head>
 <body>
