--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     }
     .container
     {
-      padding: 10px;
+      margin-left: 10px;
+      margin-right: 10px;
       width: 500px;
       background-color: rgba(245, 245, 245, 0.8);
     }
