--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     }
     .container
     {
-      width: 500px;
+      margin-left:10px;
+	    margin-right:10px;
+	    align:center;
+	   width: 500px;
       background-color: rgba(245, 245, 245, 0.8);
     }
   </style>
